@@ -10,6 +10,7 @@ Revision history for Git-Raw
  - Enable support for OS X's Security framework
  - Removed Remote methods: (Incompatible change)
     - save()
+ - Remote -> create_anonymous() no longer accepts a 'fetch_refspecs' parameter (Incompatible change)
 
 0.53      2015-04-14 20:23:42+02:00 Africa/Johannesburg
 
